--- a/src/app/saletran/checkout/balance-due/balance-due.component.html
+++ b/src/app/saletran/checkout/balance-due/balance-due.component.html
@@ -1,1 +1,14 @@
-<p>balance-due works!</p>
+<table style="width:100%;">
+    <tr>
+        <td style="width:50%"></td>
+        
+        <td style="width:50%">
+            <table  style="width:100%;">
+                <tr>
+                    <td class="rightjustfy" style="width:66%"><label>Balance Due</label></td>
+                    <td class="rightjustfy" style="width:33%"><label>{{balDue}}</label></td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
