--- a/src/app/saletran/checkout/checkout-items/checkout-items.component.html
+++ b/src/app/saletran/checkout/checkout-items/checkout-items.component.html
@@ -1,4 +1,4 @@
-<div class="panel" style="background-color:lightgrey;width:100%;">
+<div class="panel" style="width:100%;">
     <div class="panel-body ms-2 me-2 mt-2 mb-2">
         
             <table class="table table-striped">
