--- a/src/app/saletran/salesdept/deptlist.component.html
+++ b/src/app/saletran/salesdept/deptlist.component.html
@@ -1,9 +1,9 @@
 <div class="panel" style="background-color: lightgrey;">
     <div class="panel-body ms-2 me-2 mt-2 mb-2">
-        <div class="row">
+        <div class="row bkgray">
             <div class="col-md-3" *ngFor="let dept of deptList">
                 <button type="button" class="dpt btn btn-info btn-block" 
-                        style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 10px;" 
+                        style="margin-top: 10px;margin-bottom: 10px;" 
                         id="{{dept.departmentUID}}" (click)="deptClick($event, dept.departmentUID);">{{dept.departmentName}}</button>
             </div>
         </div>
