--- a/src/app/saletran/tkt-sale-item/tkt-sale-item.component.html
+++ b/src/app/saletran/tkt-sale-item/tkt-sale-item.component.html
@@ -1,18 +1,18 @@
-<div class="panel" style="background-color:lightgrey;">
+<div class="panel" style="">
     <div class="panel-body ms-2 me-2 mt-2 mb-2">
-        <div class="row">
-            <table class="table">
+        <div class="row bkgray">
+            <table class="table" style="margin-left: auto; margin-right: auto;">
                 <thead>
-                    <tr>
-                        <td><h4>Sale Item</h4></td>
-                        <td *ngIf="!allowTips"><h4>Quantity</h4></td>
-                        <td *ngIf="allowTips"><h4>Serviced By</h4></td>
-                        <td class="rightjustfy"><h4>Unit Price</h4></td>
-                        <td class="rightjustfy"><h4>Total Price</h4></td>
+                    <tr class="tktSaleItemHdr">
+                        <td>Sale Item</td>
+                        <td *ngIf="!allowTips">Quantity</td>
+                        <td *ngIf="allowTips">Serviced By</td>
+                        <td class="rightjustfy">Unit Price</td>
+                        <td class="rightjustfy">Total Price</td>
                     </tr>
                 </thead>
-                <tr *ngFor="let itm of tktSaleItems; let i = index;">
-                    <td style="width:30%"><h4><label class="label label-default">{{itm.salesItemDesc}}</label></h4></td>
+                <tr *ngFor="let itm of tktSaleItems; let i = index;" class="tktSaleItemsClass">
+                    <td style="width:30%"><label class="label label-default">{{itm.salesItemDesc}}</label></td>
                     <td style="width:30%" *ngIf="!allowTips">
                         <div class="row">
                             <button type="button" class="btn-primary btn" id="btnm{{i}}" (click)="btnMinusClicked($event, i);">
@@ -20,7 +20,7 @@
                                     <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
                                 </svg>
                             </button>
-                            <h4><span class="label label-default">&nbsp; {{itm.quantity}} &nbsp;</span></h4>
+                            <span class="label label-default">&nbsp; {{itm.quantity}} &nbsp;</span>
                             <div>
                             
                             <button type="button" class="btn-primary btn" id="btnp{{i}}" (click)="btnPlusClicked($event, i);">
@@ -47,10 +47,10 @@
                         </div>
                     </td>
                     <td style="width:20%;text-align: right;" class="rightjustfy">
-                        <h4><label class="label label-default">{{itm.unitPrice | number:'1.2-2'}}</label></h4>
+                        <label class="label label-default">{{itm.unitPrice | number:'1.2-2'}}</label>
                     </td>
                     <td style="width:20%;text-align: right;" class="rightjustfy">
-                        <h4><label class="label label-default">{{itm.unitPrice * itm.quantity | number:'1.2-2'}}</label></h4>
+                        <label class="label label-default">{{itm.unitPrice * itm.quantity | number:'1.2-2'}}</label>
                     </td>
 
                 </tr>
