upgrade to angular19

--- a/src/app/logon/vendorlt/vendorlt.component.html
+++ b/src/app/logon/vendorlt/vendorlt.component.html
@@ -28,7 +28,7 @@
                     <input type="password" id="pin" [(ngModel)]="lpin" class="form-control" maxlength="4"
                            minlength="4" />
                 </div>
-                <button name="btnSubmit" class="btn btn-primary" (click)="DoLogon($event)">Logon</button>
+                <button name="btnSubmit" id="btnSubmit" class="btn btn-primary" (click)="DoLogon($event)">Logon</button>
             </div>
         </div>
         <div id="nolocationsalert" class="alert alert-warning" role="alert" style="display:none">
