--- a/src/app/saletran/checkout/balance-due/balance-due.component.html
+++ b/src/app/saletran/checkout/balance-due/balance-due.component.html
@@ -3,7 +3,7 @@
         <td style="width:50%"></td>
         
         <td style="width:50%">
-            <table  style="width:100%;">
+            <table *ngIf="allowPartPay" style="width:100%;">
                 <tr>
                     <td class="rightjustfy" style="width:66%"><label>Balance Due</label></td>
                     <td class="rightjustfy" style="width:33%"><label>{{balDue}}</label></td>
