--- a/src/app/saletran/sale-item/sale-item.component.html
+++ b/src/app/saletran/sale-item/sale-item.component.html
@@ -1,15 +1,15 @@
 
-    <div class="panel" style="">
-        <div class="panel-body ms-2 me-2 mt-2 mb-2">
-            <div class="row bkgray">
-                <div class="col-md-6"  *ngFor="let itm of saleItemList">
-                    <button type="button" class="btn btn-info btn-block"
-                            style="margin-top: 10px;margin-bottom: 10px;"
-                            id="{{itm.salesItemID}}"
-                            (click)="salesItemClick($event, itm.salesItemID)">
-                        {{itm.salesItemDescription}}
-                    </button>
-                </div>
+<div class="panel">
+    <div class="panel-body ms-2 me-2 mt-2 mb-2">
+        <div class="row bkgray">
+            <div class="col-md-6"  *ngFor="let itm of saleItemList">
+                <button type="button" class="btn btn-info btn-block"
+                        style="margin-top: 10px;margin-bottom: 10px;"
+                        id="{{itm.salesItemID}}"
+                        (click)="salesItemClick($event, itm.salesItemID)">
+                    {{itm.salesItemDescription}}
+                </button>
             </div>
-        </div> 
-    </div>
+        </div>
+    </div> 
+</div>
