--- a/src/app/saletran/sales-cart/sales-cart.component.html
+++ b/src/app/saletran/sales-cart/sales-cart.component.html
@@ -20,13 +20,13 @@
                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
             </svg> Customer
         </button>
-        <button class="border border-white btn btn-info btn-lg ftrbtn" style="width:20%;" id="btnSalesTransCheckOut" aria-label="Left Align" (click)="btnCheckoutClick($event)">
+        <button class="border border-white btn btn-info btn-lg ftrbtn" style="width:20%;" id="btnSalesTransCheckOut" [disabled]="disableCheckoutBtn" aria-label="Left Align" (click)="btnCheckoutClick($event)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-check" viewBox="0 0 16 16">
                 <path d="M11.354 6.354a.5.5 0 0 0-.708-.708L8 8.293 6.854 7.146a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z" />
                 <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
             </svg> Checkout
         </button>
-        <button class="border border-white btn btn-info btn-lg ftrbtn" style="width:20%;" id="btnSaveCheckoutOne" aria-label="Left Align">
+        <button class="border border-white btn btn-info btn-lg ftrbtn" style="width:20%;" id="btnSaveCheckoutOne" [disabled]="disableCheckoutBtn" aria-label="Left Align">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
                 <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z" />
             </svg> Save Ticket
