--- a/src/app/saletran/tkt-sale-item/tkt-sale-item.component.html
+++ b/src/app/saletran/tkt-sale-item/tkt-sale-item.component.html
@@ -15,19 +15,19 @@
                     <td style="width:30%"><label class="label label-default">{{itm.salesItemDesc}}</label></td>
                     <td style="width:30%" *ngIf="!allowTips">
                         <div class="row">
-                            <button type="button" class="btn-primary btn" id="btnm{{i}}" (click)="btnMinusClicked($event, i);">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
+                            <button type="button" style="width: 20%;" class="btn-primary btn" id="btnm{{i}}" (click)="btnMinusClicked($event, i);">
+                                <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
                                 </svg>
                             </button>
-                            <span class="label label-default">&nbsp; {{itm.quantity}} &nbsp;</span>
+                            <span style="width: 33%;" class="label label-default">&nbsp; {{itm.quantity}} &nbsp;</span>
 
-                            <div>                            
-                            <button type="button" class="btn-primary btn" id="btnp{{i}}" (click)="btnPlusClicked($event, i);">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+                                           
+                            <button type="button" style="width: 20%;" class="btn-primary btn" id="btnp{{i}}" (click)="btnPlusClicked($event, i);">
+                                <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                                 </svg>
-                            </button></div>
+                            </button>
                         </div>
                     </td>
                     <td style="width:30%" *ngIf="allowTips">
