--- a/src/app/saletran/sale-item/sale-item.component.html
+++ b/src/app/saletran/sale-item/sale-item.component.html
@@ -2,8 +2,8 @@
 <div class="panel">
     <div class="panel-body ms-2 me-2 mt-2 mb-2">
         <div class="row bkgray">
-            <div class="col-md-6"  *ngFor="let itm of saleItemList">
-                <button type="button" class="btn btn-info btn-block"
+            <div class="col-md-6"  *ngFor="let itm of saleItemList; let index=index">
+                <button type="button" [attr.class]="index == 0 ? 'dpt btn btn-block btn-primary' : 'dpt btn btn-block btn-secondary'"
                         style="margin-top: 10px;margin-bottom: 10px;"
                         id="{{itm.salesItemID}}"
                         (click)="salesItemClick($event, itm.salesItemID)">
