--- a/src/app/saletran/sale-item/sale-item.component.html
+++ b/src/app/saletran/sale-item/sale-item.component.html
@@ -3,7 +3,7 @@
     <div class="panel-body ms-2 me-2 mt-2 mb-2">
         <div class="row bkgray">
             <div class="col-md-6"  *ngFor="let itm of saleItemList; let index=index">
-                <button type="button" [attr.class]="index == 0 ? 'dpt btn btn-block btn-primary' : 'dpt btn btn-block btn-secondary'"
+                <button type="button" [ngClass]="[activeId === itm.salesItemID ? 'dpt btn btn-block btn-primary' : 'dpt btn btn-block btn-secondary']"
                         style="margin-top: 10px;margin-bottom: 10px;"
                         id="{{itm.salesItemID}}"
                         (click)="salesItemClick($event, itm.salesItemID)">
@@ -13,3 +13,9 @@
         </div>
     </div> 
 </div>
+<!--
+                   <button type="button" [ngClass]="[ activeId === dept.departmentUID ? 'dpt btn btn-block btn-primary' : 'dpt btn btn-block btn-secondary' ]"
+                        style="margin-top: 10px;margin-bottom: 10px;" 
+                        id="{{dept.departmentUID}}" (click)="deptClick($event, dept.departmentUID);">{{dept.departmentName}}</button>
+     
+    -->
