--- a/src/app/saletran/tkt-sale-item/tkt-sale-item.component.html
+++ b/src/app/saletran/tkt-sale-item/tkt-sale-item.component.html
@@ -39,7 +39,7 @@
                                 </svg>
                             </button><div style="width:1%"></div>                   
                             <select #ddlAssociate id="ddlAssociate_{{itm.salesItemUID}}_{{i}}" style="width:89%;" class="form-control dropdown" 
-                                    (change)="onAssociateChange($event, +ddlAssociate.value, itm.salesItemUID, i)">
+                                    (change)="onAssociateChange($event, +ddlAssociate.value, itm.salesItemUID, i, ddlAssociate.innerText)">
                                 <option *ngFor="let indiv of SaleAssocList" value="{{indiv.individualLocationUID}}" [selected]="indiv.individualLocationUID == itm.srvdByAssociateVal">
                                 {{indiv.firstName + ' ' + indiv.lastName}}
                                 </option>
