--- a/src/app/logon/vendorlt/vendorlt.component.html
+++ b/src/app/logon/vendorlt/vendorlt.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-    <div class="col-md-4"></div> 
-    <div class="col-md-4"> 
+    
+    <div class="row justify-content-center"> 
         <div class="card form-group" style="width: 36rem;">
             <h5 class="card-header">Login</h5>
             <div class="card-body">
@@ -43,5 +43,5 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
         </div>
     </div>
-    <div class="col-md-4"></div>
+        
 </div>
