--- a/src/app/saletran/tkt-sale-item/tkt-sale-item.component.html
+++ b/src/app/saletran/tkt-sale-item/tkt-sale-item.component.html
@@ -39,7 +39,7 @@
                                 </svg>
                             </button><div style="width:1%"></div>                   
                             <select #ddlAssociate id="ddlAssociate_{{itm.salesItemUID}}_{{i}}" style="width:89%;" class="form-control dropdown" 
-                                    (change)="onAssociateChange($event, +ddlAssociate.value, itm.salesItemUID, i, ddlAssociate.innerText)">
+                                    (change)="onAssociateChange($event, +ddlAssociate.value, itm.salesItemUID, -1 * (i + 1), ddlAssociate.innerText)">
                                 <option *ngFor="let indiv of SaleAssocList" value="{{indiv.individualLocationUID}}" [selected]="indiv.individualLocationUID == itm.srvdByAssociateVal">
                                 {{indiv.firstName + ' ' + indiv.lastName}}
                                 </option>
@@ -47,7 +47,7 @@
                         </div>
                     </td>
                     <td style="width:20%;text-align: right;" class="rightjustfy">
-                        <label class="label label-default">{{itm.unitPrice | number:'1.2-2'}}</label>
+                        <label class="label label-default">{{dfltCurrSymbl}}{{itm.unitPrice | number:'1.2-2'}}</label>
                     </td>
                     <td style="width:20%;text-align: right;" class="rightjustfy">
                         <label class="label label-default">{{itm.unitPrice * itm.quantity | number:'1.2-2'}}</label>
