--- a/src/app/saletran/checkout/checkout-page/checkout-page.component.html
+++ b/src/app/saletran/checkout/checkout-page/checkout-page.component.html
@@ -20,10 +20,16 @@
             </svg> Customer
         </button>
         <button *ngFor="let tndr of _displayTenders" class="border border-white btn btn-info btn-lg ftrbtn" id="{{tndr.tenderTypeCode}}"  [ngStyle]="{width: tenderButtonWidthPercent + '%'}" aria-label="Left Align" (click)="btnTndrClick($event)">                    
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
-            </svg> {{tndr.tenderTypeDesc}}
-        </button>        <div >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-wallet2" viewBox="0 0 16 16">
+                <path d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5z"/>
+              </svg> {{tndr.tenderTypeDesc}}
+        </button>
+        <button *ngIf="!isRefund" class="border border-white btn btn-info btn-lg ftrbtn" [ngStyle]="{width: tenderButtonWidthPercent + '%'}" id="btnSplitPay" aria-label="Left Align" (click)="btnSplitPayClick($event)">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-signpost-split-fill" viewBox="0 0 16 16">
+            <path d="M7 16h2V6h5a1 1 0 0 0 .8-.4l.975-1.3a.5.5 0 0 0 0-.6L14.8 2.4A1 1 0 0 0 14 2H9v-.586a1 1 0 0 0-2 0V7H2a1 1 0 0 0-.8.4L.225 8.7a.5.5 0 0 0 0 .6l.975 1.3a1 1 0 0 0 .8.4h5z"/>
+              </svg> Split Pay
+        </button>    
+        <div >
             <div >
 
         
