--- a/src/app/saletran/tender/credit-card-tndr/credit-card-tndr.component.html
+++ b/src/app/saletran/tender/credit-card-tndr/credit-card-tndr.component.html
@@ -25,21 +25,21 @@
 
 <div class="footer fixed-bottom cncsnFooter">
     <div class="row">
-        <button class="border border-white btn btn-info btn-lg ftrbtn" id="btnApprove" aria-label="Left Align"
+        <button #btnApprove class="border border-white btn btn-info btn-lg ftrbtn" id="btnApprove" aria-label="Left Align"
             (click)="btnApproveClick($event)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill"
                 viewBox="0 0 16 16">
                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
             </svg> Approve
         </button>
-        <button class="border border-white btn btn-info btn-lg ftrbtn" id="btnDecline" aria-label="Left Align"
+        <button #btnDecline class="border border-white btn btn-info btn-lg ftrbtn" id="btnDecline" aria-label="Left Align"
             (click)="btnDeclineClick($event)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill"
                 viewBox="0 0 16 16">
                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
             </svg> Decline
         </button>
-        <button class="border border-white btn btn-info btn-lg ftrbtn" id="btnCancel" aria-label="Left Align"
+        <button #btnCancel class="border border-white btn btn-info btn-lg ftrbtn" id="btnCancel" aria-label="Left Align"
             (click)="btnCancelClick($event)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill"
                 viewBox="0 0 16 16">
