--- a/src/app/saletran/tender/eg-conc-tndr/eg-conc-tndr.component.html
+++ b/src/app/saletran/tender/eg-conc-tndr/eg-conc-tndr.component.html
@@ -1,1 +1,53 @@
-<p>eg-conc-tndr works!</p>
+<div class="panel">
+    <div class="panel-body">
+        <table class="table">
+            <tr>
+                <td style="width:50%;"></td>
+                <td style="text-align: left;">
+                    Payment Amount (default currency):
+                </td>
+                <td style="text-align: right;">
+                    Payment Amount:
+                </td>
+            </tr>
+            <tr>
+                <td style="width:50%;"></td>
+                <td style="text-align: left;">
+                    {{dcCurrSymbl}}{{tenderAmount}}
+                </td>
+                <td style="text-align: right;">
+                    {{ndcCurrSymbl}}{{tenderAmountFC}}
+                </td>
+            </tr>
+        </table>
+        <p class="text-center">
+            <strong>Please click approve if Eagle Cash payment is approved</strong>
+        </p>
+    </div>
+</div>
+
+<div class="footer fixed-bottom cncsnFooter">
+    <div class="row">
+        <button #btnApprove class="border border-white btn btn-info btn-lg ftrbtn" id="btnApprove"
+            aria-label="Left Align" (click)="btnApproveClick($event)">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill"
+                viewBox="0 0 16 16">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
+            </svg> Approve
+        </button>
+        <button #btnDecline class="border border-white btn btn-info btn-lg ftrbtn" id="btnDecline"
+            aria-label="Left Align" (click)="btnDeclineClick($event)">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill"
+                viewBox="0 0 16 16">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
+            </svg> Decline
+        </button>
+        <button #btnCancel class="border border-white btn btn-info btn-lg ftrbtn" id="btnCancel" aria-label="Left Align"
+            (click)="btnCancelClick($event)">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill"
+                viewBox="0 0 16 16">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
+            </svg> Cancelled
+        </button>
+    </div>
+</div>
